# FEDI

./: .gitignore  .readthedocs.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test.txt
.github/: CODEOWNERS
FEDI/HAITCH/: README.md  dMRI_HAITCH.sh  dMRI_HAITCH_browser.sh  dMRI_HAITCH_local-config.sh  user_config.sh
FEDI/HAITCH/fetal_tract/: 5tt_key.csv  adjust_parcellation.py  advanced_fetal_tractography.py  create_ctx_wm.py  crl_fetal_parcellation_ACT.qry  crl_fetal_parcellation_NON_ACT.qry  extract_labels.py  fivett_gen.py  get_max_min_streamline.py  get_node_coordinates.r  labelkey.csv  tensor2odf.py  tract_angles.csv  utils.py  (+1 more)
FEDI/sampling_scheme/: HAITCH_scheme_siemens_product_sequence.dvs
FEDI/scripts/: fedi_apply_transform.py  fedi_dmri_fod.py  fedi_dmri_moco.py  fedi_dmri_outliers.py  fedi_dmri_qweights.py  fedi_dmri_recon.py  fedi_dmri_reg.py  fedi_dmri_rotate_bvecs.py  fedi_dmri_snr.py  fedi_testing_commands.py
FEDI/utils/: FEDI_shore.py  common.py  fedi_testing_commands.py
HAITCH/: README.md
HAITCH/HAITCH/: dMRI_HAITCH_local-config.sh
documentation/: README.rst  generate_help_docs.sh  pyproject.toml
documentation/source/: Third.rst  api.rst  conf.py  index.rst  references.rst  usage.rst
fedi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: README_BUILD.md  build_and_upload.sh  download_models.sh
testing/: README.md  example_Transform_v1_0GenericAffine.mat  example_Transform_v2_0GenericAffine.mat  example_Transform_v3_0GenericAffine.mat  gradient_table_example.txt
(+78 files in other folders)
