[tool.poetry]
name = "fedi"
version = "0.1.0"
description = "Fetal and Neonatal Development Imaging Toolbox"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
scipy = "*"
nibabel = "*"
matplotlib = "*"
dipy = "*"
cvxpy = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
